Edited git ignore (catboost info)

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,7 @@ project_1/data
 project_3/data
 project_5/data
 project_6/data
+project_7/catboost_info
 
 # Current tasks data
 Current_tasks/data
