--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,7 @@ project_3/data
 project_5/data
 project_6/data
 project_7/catboost_info
+project_7/project_7_venv
 
 # Current tasks data
 Current_tasks/data
