added project_7 data to ignor list

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,7 @@ project_5/data
 project_6/data
 project_7/catboost_info
 project_7/project_7_venv
+project_7/data
 
 # Current tasks data
 Current_tasks/data
