--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,7 @@ project_6/data
 project_7/catboost_info
 project_7/project_7_venv
 project_7/data
+project_8/data
 
 # Current tasks data
 Current_tasks/data
