--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,7 @@ project_7/catboost_info
 project_7/project_7_venv
 project_7/data
 project_8/data
+project_8/models
 
 # Current tasks data
 Current_tasks/data
