--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,7 @@ project_7/project_7_venv
 project_7/data
 project_8/data
 project_8/models
+project_8/web/models
 
 # Current tasks data
 Current_tasks/data
