--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,7 @@ project_7/data
 project_8/data
 project_8/models
 project_8/web/app/models
+project_8/myenv
 
 # Current tasks data
 Current_tasks/data
