--- a/.gitignore
+++ b/.gitignore
@@ -137,8 +137,9 @@ project_7/catboost_info
 project_7/project_7_venv
 project_7/data
 project_8/data
-project_8/models
-project_8/web/app/models
+project_8/web/app/models/ALS
+project_8/web/app/models/Google Colab
+project_8/web/app/models/Local
 project_8/myenv
 
 # Current tasks data
