--- a/.gitignore
+++ b/.gitignore
@@ -140,7 +140,7 @@ project_8/data
 project_8/web/app/models/ALS
 project_8/web/app/models/Google Colab
 project_8/web/app/models/Local
-project_8/myenv
+project_8/my_env
 
 # Current tasks data
 Current_tasks/data
