--- a/project_8/web/requirements3.txt
+++ b/project_8/web/requirements3.txt
@@ -49,7 +49,7 @@ jupyterlab==4.2.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.2
 jupyterlab_widgets==3.0.11
-lightfm @ git+https://github.com/daviddavo/lightfm@f0eb500ead54ab65eb8e1b3890337a7223a35114
+#lightfm @ git+https://github.com/daviddavo/lightfm@f0eb500ead54ab65eb8e1b3890337a7223a35114
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mistune==3.0.2
