--- a/project_8/web/Dockerfile
+++ b/project_8/web/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get -y install libxml2-dev libxslt1-dev zlib1g-dev g++
 
 RUN python -m pip install --upgrade pip
 RUN pip install --upgrade pip setuptools wheel
-RUN pip install --no-cache-dir -r requirements3.txt
+RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install --no-cache-dir lightfm==1.17
 
 #RUN pip install lightfm --upgrade --ignore-installed scipy
